--- a/app/views/layout/head.jade
+++ b/app/views/layout/head.jade
@@ -1,6 +1,7 @@
 meta(name='viewport', content='width=device-width, initial-scale=0.8')
 link(rel='shortcut icon', type='image/jpg', href='/images/favicon.png')
-link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css')
+//- link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css')
+link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.css')
 link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/admin-lte/3.0.5/css/adminlte.min.css')
 //- link(rel='stylesheet', href='/stylesheets/font-weather/weather-icons.min.css')
 link(rel='stylesheet', href='/stylesheets/cuaca.css')
@@ -14,6 +15,8 @@ link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2
 link(rel='stylesheet', href='/stylesheets/main.css')
 
 script(src='https://code.jquery.com/jquery-3.5.1.min.js')
+//- script(src='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css')
+//- script(src='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/fonts/fontawesome-webfont.svg')
 script.
 	//- var BASE_URL = 'https://peringatandini.site';
 	var BASE_URL = 'http://localhost:3000';
