--- a/app/views/layout/js.jade
+++ b/app/views/layout/js.jade
@@ -14,6 +14,7 @@ script(src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"
 script(src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.0/Chart.bundle.min.js") 
 script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/pdfmake.min.js')
 script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/vfs_fonts.js')
+script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/js/all.min.js')
 script(type='text/javascript', src='https://cdn.datatables.net/v/bs4/jszip-2.5.0/dt-1.10.20/b-1.6.1/b-flash-1.6.1/b-html5-1.6.1/b-print-1.6.1/datatables.min.js')
 script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.bundle.js')
 script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.js')
